<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/tool_bar"
        style="@style/toolBarStyle">

        <com.njwyt.airpurgesimple.view.IconTextView
            android:id="@+id/tv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/ic_back"
            android:textColor="@color/colorBackground"
            android:textSize="?df_22sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/titleTv"
            style="@style/toolBarTitleStyle"
            android:text="@string/set_mode" />

        <!--<com.njwyt.airpurgesimple.view.IconTextView-->
        <!--android:id="@+id/set_mode"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="end"-->
        <!--android:layout_marginEnd="10dp"-->
        <!--android:padding="10dp"-->
        <!--android:text="@string/ic_setting"-->
        <!--android:textColor="@color/colorBackground"-->
        <!--android:textSize="16sp" />-->

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_intelligent"
                    style="@style/setting_mode1_textImage"
                    android:drawableTop="@drawable/intelligent"
                    android:text="@string/intelligent_mode" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="10dp"
                    android:background="@color/colorGray" />

                <TextView
                    android:id="@+id/tv_medium"
                    style="@style/setting_mode1_textImage"
                    android:drawableTop="@drawable/medium"
                    android:text="@string/medium" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="10dp"
                    android:background="@color/colorGray" />

                <TextView
                    android:id="@+id/tv_formalde_removal"
                    style="@style/setting_mode1_textImage"
                    android:drawableTop="@drawable/formalde"
                    android:text="@string/formalde_removal" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="10dp"
                    android:background="@color/colorGray" />

                <TextView
                    android:id="@+id/tv_shutdown"
                    style="@style/setting_mode1_textImage"
                    android:drawableTop="@drawable/shutdown"
                    android:text="@string/shutdown" />


            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:background="@color/colorGray" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_strong"
                    style="@style/setting_mode1_textImage"
                    android:drawableTop="@drawable/strong"
                    android:text="@string/strong" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginEnd="10dp"
                    android:background="@color/colorGray" />

                <TextView
                    android:id="@+id/tv_weak"
                    style="@style/setting_mode1_textImage"
                    android:drawableTop="@drawable/weak"
                    android:text="@string/weak" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginEnd="10dp"
                    android:background="@color/colorGray" />

                <TextView
                    android:id="@+id/tv_force"
                    style="@style/setting_mode1_textImage"
                    android:drawableTop="@drawable/force"
                    android:text="@string/force" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginEnd="10dp"
                    android:background="@color/colorGray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:background="@drawable/set_mode1_shape"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/tv_timer"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal"
                        android:background="@drawable/set_mode1_shape"
                        android:drawablePadding="10dp"
                        android:drawableTop="@drawable/timer"
                        android:gravity="center_horizontal"
                        android:paddingLeft="30dp"
                        android:paddingRight="30dp"
                        android:paddingTop="30dp"
                        android:textSize="20sp"
                        android:text="@string/timer2"/>

                    <Switch
                        android:id="@+id/sw_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:switchMinWidth="60dp" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</LinearLayout>