<?xml version="1.0" encoding="utf-8"?>
<layout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.njwyt.airpurgesimple.view.NoScrollViewPager
            android:id="@+id/viewpager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/line" />

        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_above="@+id/bottom_buttons"
            android:background="@color/colorLine" />

        <LinearLayout
            android:id="@+id/bottom_buttons"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_alignParentBottom="true"
            android:gravity="center">
            <!--主页-->
            <LinearLayout
                android:id="@+id/ll_room"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <com.njwyt.airpurgesimple.view.IconTextView
                    android:id="@+id/itv_room"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ic_door"
                    android:textColor="@color/colorGreen"
                    android:textSize="?df_24sp" />

                <TextView
                    android:id="@+id/tv_room"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:text="@string/room"
                    android:textColor="@color/colorGreen"
                    android:textSize="?df_12sp" />
            </LinearLayout>

            <!--设置-->
            <LinearLayout
                android:id="@+id/ll_setting"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <com.njwyt.airpurgesimple.view.IconTextView
                    android:id="@+id/itv_setting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ic_setting"
                    android:textColor="@color/colorGreen"
                    android:textSize="?df_24sp" />

                <TextView
                    android:id="@+id/tv_setting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:text="@string/setting"
                    android:textColor="@color/colorGreen"
                    android:textSize="?df_12sp" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</layout>